# Marketplace-FastAPI

./: .env-example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  alembic.ini  database.db  dev.md  pyproject.toml  pytest.ini  requirements.txt
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql-analysis.yml  notify-telegram.yml
deployments/compose/backend/: docker-compose.yml
docs/: ci-cd.md  ci.md  github-actions.md  github-commands.md  infrostructure.md  plan.md  plan2.md  tools.md
src/: app.py  main.py
src/api/: __init__.py  routers.py
src/api/v1/: admin.py  auth.py  brand.py  cart.py  category.py  couriers.py  dashboard.py  deliveries.py  delivery_address.py  orders.py  payments.py  promo_codes.py  social_auth.py  upload.py  user.py  users.py
src/core/: .gitignore  celery.py  config.py  database.py  email.py  exceptions.py  lifespan.py  logger.py  monitoring.py  prometheus.py  security.py  sentry.py  settings.py
src/core/config/: auth.py  base.py  broker.py  database.py  email.py  redis.py  social.py  stripe.py
src/db/: base.py
src/db/crud/: base.py  brand.py  cart.py  category.py  courier.py  delivery_address.py  order.py  payment.py  product.py  promo_codes.py  token.py  user.py
src/db/dependencies/: auth.py  (+1 more)
src/middlewares/: request_id_middleware.py
src/schemas/: auth.py  brand.py  cart.py  category.py  courier.py  delivery.py  delivery_address.py  error.py  order.py  product.py  promo_code.py  review.py  seller.py  user.py
src/services/: auth_service.py  cart_service.py  courier_service.py  delivery_address_service.py  delivery_service.py  file_service.py  order_service.py  password_service.py  payment_service.py  product_service.py  promo_service.py  social_auth_service.py  user_service.py
src/tasks/: send_reset_password.py  user_tasks.py
src/tests/: conftest.py
src/utils/: file_utils.py  shortcuts.py  sms_utils.py
tests/: conftest.py  users_test.py
(+54 files in other folders)
