[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "black>=25.11.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "mypy>=1.19.0",
    "orjson>=3.11.4",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.5.0",
    "psycopg-binary>=3.2.13",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.7",
    "uvicorn[standard]>=0.38.0",
]
