[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "black>=25.11.0",
    "celery>=5.6.0",
    "fastapi>=0.122.0",
    "fastapi-mail>=1.5.8",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "mypy>=1.19.0",
    "orjson>=3.11.4",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.5.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg-binary>=3.2.13",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.7",
    "sentry-sdk>=2.47.0",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn[standard]>=0.38.0",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
